// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render JobDescription with title correctly 1`] = `
<Fragment>
  <h5>
    business-card-experience-description-title
  </h5>
  <Trans
    key="some-prefix-1"
    parent="div"
    t={
      [MockFunction] {
        "calls": Array [
          Array [
            "business-card-experience-description-title",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": "business-card-experience-description-title",
          },
        ],
      }
    }
  >
    some-prefix-1
  </Trans>
  <Trans
    key="some-prefix-2"
    parent="div"
    t={
      [MockFunction] {
        "calls": Array [
          Array [
            "business-card-experience-description-title",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": "business-card-experience-description-title",
          },
        ],
      }
    }
  >
    some-prefix-2
  </Trans>
  <Trans
    key="some-prefix-3"
    parent="div"
    t={
      [MockFunction] {
        "calls": Array [
          Array [
            "business-card-experience-description-title",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": "business-card-experience-description-title",
          },
        ],
      }
    }
  >
    some-prefix-3
  </Trans>
</Fragment>
`;

exports[`should render JobDescription without title correctly 1`] = `
<Fragment>
  <Trans
    key="some-prefix-1"
    parent="div"
    t={[MockFunction]}
  >
    some-prefix-1
  </Trans>
  <Trans
    key="some-prefix-2"
    parent="div"
    t={[MockFunction]}
  >
    some-prefix-2
  </Trans>
</Fragment>
`;
